--- a/package.json
+++ b/package.json
@@ -10,8 +10,32 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-community/geolocation": "^3.4.0",
+    "@react-native-picker/picker": "^2.10.2",
+    "@react-navigation/bottom-tabs": "^7.0.14",
+    "@react-navigation/native": "^7.0.9",
+    "@react-navigation/native-stack": "^7.1.10",
+    "@reduxjs/toolkit": "^2.4.0",
+    "axios": "^1.7.8",
+    "lottie-react-native": "^7.1.0",
+    "nativewind": "^2.0.11",
     "react": "18.3.1",
-    "react-native": "0.77.0"
+    "react-native": "0.77.0",
+    "react-native-element-dropdown": "^2.12.2",
+    "react-native-gesture-handler": "^2.21.2",
+    "react-native-get-location": "^5.0.0",
+    "react-native-image-crop-picker": "^0.42.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-maps": "^1.20.1",
+    "react-native-permissions": "^5.2.4",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.3.0",
+    "react-native-select-dropdown": "^4.0.1",
+    "react-native-toast-message": "^2.2.1",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -31,6 +55,7 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
+    "tailwindcss": "^3.3.2",
     "typescript": "5.0.4"
   },
   "engines": {
